# get-papers-project

./: README.MD  cli.py  my_results.csv  pyproject.toml
get_papers/: api.py  core.py  identifier.py  models.py  parser.py
