# pyproject.toml

[tool.poetry]
name = "get-papers-vb563488"
version = "0.1.0"
description = "A tool to fetch pharma/biotech papers from PubMed."
authors = ["Vatsal birla <birla.vatsal04@gmail.com>"]  # <-- UPDATE THIS
license = "MIT"                               # <-- ADD THIS
readme = "README.md"
homepage = "https://github.com/Vatsalbirla317/get-papers-project" # <-- ADD YOUR GITHUB URL
packages = [{include = "get_papers"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
lxml = "^4.9.3"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# This section makes the command `get-papers-list` available
[tool.poetry.scripts]
get-papers-list = "cli:app"
